2000-05-06  Christopher James Lahey  <clahey@helixcode.com>

	* e-msg-composer-hdrs.c: Turned off focus in the To, Cc, and Bcc
	buttons.

2000-05-02  Matt Loper  <matt@helixcode.com>

	* Makefile.am: set G_LOG_DOMAIN.

2000-04-28  Dan Winship  <danw@helixcode.com>

	* e-msg-composer-hdrs.c (set_recipients): Update (minimally) for
	Camel recipient changes.

2000-04-27  Dan Winship  <danw@helixcode.com>

	* e-msg-composer.c (e_msg_composer_new_from_url): New routine, to
	process mailto URLs.

2000-04-26  Dan Winship  <danw@helixcode.com>

	* e-msg-composer.c (build_message): Only generate a multipart
	message if there are attachments. Otherwise generate a single
	part.

	* Update for CamelMimeBodyPart -> CamelMimePart

2000-04-26  Dan Winship  <danw@helixcode.com>

	* e-msg-composer-attachment-bar.c (attach_to_multipart): add a
	s/SIMPLE_// that notzed missed. Update to use
	camel_mime_part_set_content.
	* e-msg-composer.c (build_message): remove a now-unused variable.
	Update for camel_mime_part_set_content.

2000-04-26  NotZed  <NotZed@HelixCode.com>

	* e-msg-composer.c (build_message): Use camel_mime_part_set_text()
	to set the text rather than messing with data wrappers.

	* e-msg-composer-attachment-bar.c (attach_to_multipart): Change
	for new camel-stream interfaces.
	(attach_to_multipart): Also set base64 encoding by default.

2000-04-25  Radek Doulik  <rodo@helixcode.com>

	* e-msg-composer.c (create_editor): use uih here
	(e_msg_composer_construct): create menubar/toolbar before creating
	editor control

2000-04-23  Dan Winship  <danw@helixcode.com>

	* Makefile.am: build libcomposer static and don't install it.

	* e-msg-composer-attachment-bar.c (attach_to_multipart): This was
	only half-implemented. Finish it, mostly.

2000-04-22  Dan Winship  <danw@helixcode.com>

	* e-msg-composer.c (e_msg_composer_add_header): new function to
	make the composer record additional headers it should output.
	(In-Reply-To), etc.
	(build_message): output them
