@@ -1,3 +1,11 @@
+2000-05-07  Dan Winship  <danw@helixcode.com>
+
+	* e-msg-composer.c (build_message): unref content, etc. after
+	attaching it to message.
+
+	* e-msg-composer-attachment-bar.c (attach_to_multipart): unref
+	part after attaching it.
+
 2000-05-06  Christopher James Lahey  <clahey@helixcode.com>
 
 	* e-msg-composer-hdrs.c: Turned off focus in the To, Cc, and Bcc
